# Coding-in-Sleep-2

./: README.md  README.zh-CN.md  pyproject.toml
skills/sleepcode-expostulate/: SKILL.md
skills/sleepcode-expostulate/agents/: openai.yaml
skills/sleepcode-review/: SKILL.md
skills/sleepcode-review/scripts/: compare_paths.py
sleepcode/: __init__.py  agents.py  cli.py  git.py  models.py  prompts.py  reporting.py  scheduler.py  store.py  util.py  validation.py
tests/: helpers.py  test_agents.py  test_cli.py  test_git.py  test_prompts.py  test_scheduler.py  test_store.py  test_validation.py
